# llm-council

./: README.md  pyproject.toml  secret_doc.txt  test_rag.py  verify_fix.py
backend/: config.py  council.py  database.py  main.py  openrouter.py  rag.py  storage.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  Sidebar.css
