[project]
name = "llm-council"
version = "0.1.0"
description = "Your LLM Council"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.31.0",
    "greenlet>=3.3.1",
    "python-multipart>=0.0.22",
    "pypdf>=6.6.2",
    "sentence-transformers>=5.2.2",
    "langchain-text-splitters>=1.1.0",
    "numpy>=2.2.6",
]
